# N.E.K.O.-PC-wayland

./: .gitignore  Cargo.toml  README.md  build.rs
.VSCodeCounter/2026-03-15_22-43-42/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-03-16_00-59-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-03-16_23-14-18/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
docs/: wayland-protocol-debug.md  wayland-window-design.md
scripts/: build_cef_c_standalone_helper.sh  build_cef_official_sample.sh  run_cef_c_bridge_helper.sh  stage_cef_official_helper.sh  trace-wayland-input-region.sh
src/: app.rs  config.rs  desktop_config.rs  frame_bridge.rs  ipc.rs  language.rs  launcher.rs  lib.rs  main.rs  official_helper.rs  shutdown.rs  standalone_helper.rs  tray.rs
src/cef/: N.E.K.O.-PC-wayland.code-workspace  app.rs  bootstrap.rs  browser.rs  c_bridge.rs  c_shim.rs  c_standalone_helper_main.c  capi_probe.c  client.rs  events.rs  ffi.rs  ffi_fallback.rs  input_bridge.rs  log.rs  mod.rs  render_handler.rs  runtime.rs  strings.rs
src/wayland/: detect.rs  engine.rs  input_region.rs  mod.rs  raw_host.rs  strategy.rs
