[package]
name = "neko_pc_wayland"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cairo-rs = "0.18.5"
ctrlc = "3.5.0"
env_logger = "0.11.8"
gdk = "0.18.2"
gdkwayland-sys = "0.18.2"
gtk = "0.18.2"
libc = "0.2.183"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smithay-client-toolkit = "0.20.0"
tao = "0.30.8"
wayland-client = "0.31.13"
wry = { version = "0.53.5", features = ["transparent"] }
xkeysym = "0.2.1"

[[bin]]
name = "neko-pc-wayland"
path = "src/main.rs"
